--- a/app/templates/analysis/tradingview.html
+++ b/app/templates/analysis/tradingview.html
@@ -3,10 +3,8 @@
 {% block title %}TradingView Charts - {{ symbol if symbol else 'Aksjeradar' }}{% endblock %}
 
 {% block head %}
-<!-- TradingView Chart Library -->
-<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-<!-- TradingView Fix Script -->
-<script type="text/javascript" src="{{ url_for('static', filename='js/tradingview-fix.js') }}"></script>
+<!-- TradingView Enhanced Script -->
+<script type="text/javascript" src="{{ url_for('static', filename='js/tradingview-enhanced.js') }}"></script>
 {% endblock %}
 
 {% block content %}
