--- a/app/templates/norwegian_intel/index.html
+++ b/app/templates/norwegian_intel/index.html
@@ -59,7 +59,7 @@
             <div class="card h-100 border-0 shadow-sm">
                 <div class="card-body text-center">
                     <div class="feature-icon mb-3">
-                        <i class="bi bi-ship text-success" style="font-size: 3rem;"></i>
+                        <i class="fas fa-ship text-success" style="font-size: 3rem;"></i>
                     </div>
                     <h5 class="card-title">Shipping Intelligence</h5>
                     <p class="card-text">Korrelasjon med Baltic Dry Index og flåteanalyse</p>
